tests/ui/once_self_method.stderr
error: #[once] cannot be applied to methods that take `self`
 --> tests/ui/once_self_method.rs:4:4
  |
4 | fn my_fn(&self, k: i32) -> i32 {
  |    ^^^^^
