tests/ui/once_self_method.rs
use cached::macros::once;

#[once]
fn my_fn(&self, k: i32) -> i32 {
    k
}

fn main() {}
